--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -255,7 +255,8 @@ td.comment {
 .fictioneer-metabox-text,
 .fictioneer-metabox-url,
 .fictioneer-metabox-select,
-.fictioneer-metabox-textarea {
+.fictioneer-metabox-textarea,
+.fictioneer-metabox-image {
   &:not(:first-child) {
     margin-top: 16px;
   }
@@ -343,6 +344,90 @@ td.comment {
     height: 82px;
     width: 100%;
     resize: vertical;
+  }
+}
+
+.fictioneer-metabox-image {
+  &__wrapper {
+    position: relative;
+    background: #f0f0f0;
+    border-radius: 2px;
+  }
+
+  &__display {
+    display: block;
+    aspect-ratio: 4 / 1.5;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 2px;
+    width: 100%;
+  }
+
+  &__upload,
+  &__replace,
+  &__remove {
+    cursor: pointer;
+    box-sizing: border-box;
+    appearance: none;
+    display: block;
+    padding: 0;
+    border: none;
+    border-radius: 2px;
+
+    &.hidden {
+      display: none;
+    }
+  }
+
+  &__upload {
+    position: absolute;
+    inset: 0;
+    background: #f0f0f0;
+    padding: 12px;
+    width: 100%;
+    transition: filter .2s;
+
+    &:hover {
+      filter: brightness(0.95);
+    }
+  }
+
+  &__replace,
+  &__remove {
+    display: grid;
+    place-content: center;
+    flex: 1 1 auto;
+    background: hsla(0,0%,100%,.75);
+    font-size: 13px;
+    font-weight: 400;
+    padding: 6px 12px;
+    height: 36px;
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    backdrop-filter: blur(16px) saturate(180%);
+
+    &:hover {
+      color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #3858e9));
+    }
+  }
+
+  &__edit-actions {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    gap: 8px;
+    padding: 8px;
+    opacity: 0;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &.hidden {
+      display: none;
+    }
   }
 }
 
