--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -264,7 +264,7 @@ td.comment {
   &__wrapper {
     position: relative;
 
-    &-image {
+    &--image {
       background: #f0f0f0;
       border-radius: 2px;
     }
@@ -399,6 +399,7 @@ td.comment {
     display: block;
     font-size: 16px;
     margin: 0;
+    border-radius: 2px;
     width: 100%;
 
     @include bp(600px) {
