--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -275,7 +275,8 @@ td.comment {
     }
   }
 
-  &__label {
+  &__label,
+  &-heading {
     display: block;
     font-size: 11px;
     font-weight: 500;
@@ -283,6 +284,12 @@ td.comment {
     text-transform: uppercase;
     padding: 0px;
     margin-bottom: 8px;
+  }
+
+  &-heading {
+    &:not(:first-child) {
+      margin-top: 16px;
+    }
   }
 
   &__description {
