Add relationship field ACF helper function

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -269,6 +269,10 @@ td.comment {
     display: none !important;
   }
 
+  .acf-field {
+    margin: 0;
+  }
+
   &__wrapper {
     position: relative;
 
