--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -553,6 +553,12 @@ td.comment {
     width: 100%;
     resize: vertical;
   }
+
+  &__textarea--code:is(textarea) {
+    font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier, monospace;
+    font-size: 11px;
+    line-height: 1.7;
+  }
 }
 
 // =============================================================================
