Update handling of required fields

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -285,7 +285,7 @@ td.comment {
     display: none;
   }
 
-  &--invalid {
+  &--invalid:not(.pending-validation) {
     [class*="fictioneer-meta-field"]:is(input, textarea, select) {
       border-color: #dc3232;
 
