--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -1,4 +1,5 @@
 .modal {
+  --modal-width: 300px;
   position: fixed;
   inset: 0;
   z-index: 1000;
@@ -62,7 +63,8 @@
     background: var(--modal-background);
     border-radius: var(--layout-border-radius-large);
     max-height: calc(100% - 20px);
-    width: 300px;
+    width: var(--modal-width);
+    max-width: calc(100vw - 20px);
     box-shadow: var(--floating-shadow);
     overflow: auto;
     transform: translate(-50%, -50%);
@@ -75,6 +77,7 @@
 
     ::-webkit-scrollbar {
       width: 6px;
+      height: 6px;
       border-radius: 1px;
     }
 
@@ -224,6 +227,23 @@
     }
   }
 
+  &__textarea {
+    display: block;
+    background: transparent;
+    font-family: var(--ff-mono);
+    font-size: 13px;
+    padding: 0;
+    width: 100%;
+    resize: none;
+
+    &._changelog {
+      font-size: 11px;
+      line-height: 20px;
+      white-space: pre;
+      height: 300px;
+    }
+  }
+
   &__actions {
     display: flex;
     justify-content: flex-end;
@@ -235,4 +255,8 @@
       }
     }
   }
+}
+
+.chapter-changelog {
+  --modal-width: 450px;
 }
