--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -616,6 +616,177 @@ td.comment {
     font-size: 11px;
     line-height: 1.7;
   }
+
+  &__relationships {
+    font-size: 12px;
+    border: 1px solid #c3c4c7;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .04);
+
+    @include bp(768px) {
+      font-size: 13px;
+    }
+
+    &-lists {
+      display: flex;
+      align-items: top;
+    }
+
+    &-values,
+    &-source {
+      flex: 1 1 50%;
+      list-style: none;
+      padding: 5px;
+      margin: 0;
+      height: 210px;
+      overflow: scroll;
+    }
+
+    &-source {
+      background: rgba(0, 0, 0, .02);
+      border-right: 1px solid #c3c4c7;
+
+      li {
+        cursor: default;
+
+        &:not(.disabled):hover {
+          cursor: pointer;
+        }
+      }
+    }
+
+    &-values {
+      li {
+        cursor: move;
+        background: #ffffff;
+      }
+    }
+
+    &-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 10px;
+      line-height: 1.3;
+      overflow-wrap: break-word;
+      padding: 5px;
+      margin: 0;
+
+      &.disabled {
+        opacity: .5;
+      }
+
+      &.is-dragged-ghost {
+        background: rgba(var(--wp-admin-theme-color--rgb), .1);
+      }
+
+      > span {
+        pointer-events: none;
+        max-width: calc(100% - 30px);
+      }
+
+      button {
+        cursor: pointer;
+        appearance: none;
+        flex: 0 0 auto;
+        background: transparent;
+        padding: 0;
+        border: none;
+        overflow: hidden;
+        transform: scale(1.25);
+
+        .dashicons {
+          color: #ffffff;
+          font-size: 16px;
+          text-align: right;
+          height: auto;
+          width: auto;
+        }
+      }
+    }
+
+    &-source-observer {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      margin: 0;
+      padding: 5px;
+
+      img {
+        height: 16px;
+        width: 16px;
+      }
+    }
+
+    :is(ol, ul):not(.is-sorting) li {
+      &:not(.disabled):hover {
+        background: var(--wp-components-color-accent, var(--wp-admin-theme-color, #3858e9));
+        color: var(--wp-components-color-accent-inverted, #ffffff);
+      }
+
+      &.disabled:hover {
+        background: rgba(0, 0, 0, .05);
+      }
+    }
+
+    &-info {
+      background: rgba(0, 0, 0, .02);
+      color: #757575;
+      padding: 10px;
+      border-top: 1px solid #c3c4c7;
+    }
+
+    &-filters {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 0 10px;
+      border-bottom: 1px solid #c3c4c7;
+    }
+
+    &-selects {
+      display: flex;
+      gap: 10px;
+      flex: 0 0 auto;
+      padding: 7px 10px;
+
+      select {
+        margin: 0;
+      }
+    }
+
+    &-search {
+      flex: 1 1 auto;
+
+      input {
+        display: block;
+        background: transparent;
+        padding: 8px 10px;
+        margin: 0;
+        border: none;
+        width: 100%;
+
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
+      }
+    }
+
+    &-item-error,
+    &-no-matches {
+      line-height: 1.3;
+      overflow-wrap: break-word;
+      padding: 5px;
+      margin: 0;
+
+      .dashicons {
+        color: #d63638;
+        font-size: 16px;
+        height: auto;
+        width: auto;
+      }
+    }
+  }
 }
 
 // =============================================================================
