Improve relationship meta field CSS

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -657,7 +657,7 @@ td.comment {
       padding: 5px;
       margin: 0;
       height: 210px;
-      overflow: scroll;
+      overflow: auto;
     }
 
     &-source {
@@ -754,6 +754,15 @@ td.comment {
 
       &.disabled:hover {
         background: rgba(0, 0, 0, .05);
+      }
+    }
+
+    :is(ol, ul) .sortable-drag {
+      background: var(--wp-components-color-accent, var(--wp-admin-theme-color, #3858e9)) !important;
+      color: var(--wp-components-color-accent-inverted, #ffffff) !important;
+
+      button {
+        display: none;
       }
     }
 
