Mark private comments in admin

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -94,6 +94,10 @@ td.comment {
   border-color: #c00;
 }
 
+#the-comment-list tr.private {
+  background-image: repeating-linear-gradient(-45deg, rgb(0 0 0 / 3%), rgb(0 0 0 / 3%) 2px, transparent 2px, transparent 5px);
+}
+
 // =============================================================================
 // CUSTOMIZER
 // =============================================================================
