--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -19,7 +19,7 @@
     content-visibility: auto;
   }
 
-  :is(.custom-logo-link, .custom-logo, .header__title-link) {
+  :is(.custom-logo-link, .custom-logo) {
     display: block;
   }
 
@@ -107,6 +107,74 @@
   &__wrapper {
     @include bp(desktop) {
       border-radius: var(--layout-border-radius-large);
+    }
+  }
+}
+
+.top-header {
+  background: var(--layout-top-header-background-color);
+  width: 100%;
+  contain: style layout; // Improves performance
+
+  &__content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem 1rem .5rem;
+    margin: 0 auto;
+    max-width: var(--site-width);
+
+    @include bp(desktop) {
+      justify-content: flex-start;
+      padding-bottom: .25rem;
+    }
+  }
+
+  .custom-logo-link {
+    flex: 0 0 auto;
+  }
+
+  .custom-logo {
+    display: block;
+    height: var(--layout-site-logo-height);
+    max-height: calc(var(--site-title-font-size) + var(--site-title-tagline-font-size) + 1rem);
+    width: auto;
+    object-fit: contain;
+  }
+
+  &._no-tagline .custom-logo {
+    max-height: calc(var(--site-title-font-size) + .75rem);
+  }
+
+  &._no-title .custom-logo {
+    max-height: unset;
+  }
+
+  &__title {
+    flex: 0 1 auto;
+  }
+
+  &__heading {
+    font: 700 var(--site-title-font-size)/1.3 var(--site-title-font);
+    letter-spacing: 0;
+
+    a {
+      color: var(--site-title-heading-color);
+    }
+  }
+
+  &__tagline {
+    color: var(--site-title-tagline-color);
+    font: 400 var(--site-title-tagline-font-size)/1.3 var(--ff-heading);
+    letter-spacing: 0;
+  }
+
+  &._no-logo {
+    text-align: center;
+
+    @include bp(desktop) {
+      text-align: left;
     }
   }
 }
