Updated mobile menu site shadow

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -227,7 +227,7 @@
 
   // === MOBILE MENU ===========================================================
   --mobile-menu-background: var(--e-body);
-  --mobile-menu-site-box-shadow: 0 0 4px rgb(0 0 0 / 30%);
+  --mobile-menu-site-box-shadow: inset -5px 0 3px -4px rgb(0 0 0 / 30%);
   --mobile-menu-overlay: rgb(0 0 0 / 20%);
   --mobile-menu-text-shadow: var(--text-shadow);
   --mobile-menu-bookmark-progress-background: rgb(0 0 0 / 40%);
